--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,8 +10,8 @@
             <h1 class="hero-title">Votre Espace de Rêve Commence Ici</h1>
             <p class="hero-description">Explorez nos collections exclusives pour la salle de bain. Design, qualité et innovation pour transformer votre intérieur.</p>
             <div class="hero-actions" data-aos="fade-up" data-aos-delay="200">
-              <a href="#products" class="btn-primary">Voir Nos Produits</a>
-              <a routerLink="/category" class="btn-secondary">Parcourir les Catégories</a>
+              <a href="#products" class="btn-primary" style="background-color: #11262B !important ;">Voir Nos Produits</a>
+              <a routerLink="/category"   style="background-color: #11262B !important ;" class="btn-secondary">Parcourir les Catégories</a>
             </div>
             <div class="features-list" data-aos="fade-up" data-aos-delay="300">
               <div class="feature-item">
@@ -71,7 +71,7 @@
         <div class="col-lg-6">
           <div class="category-featured" data-aos="fade-right" data-aos-delay="200">
             <div class="category-image">
-              <img src="assets/img/bain/photo-1729073376204-5d7d25b9226f.avif" alt="Cabine de douche Moderne" class="img-fluid">
+              <img src="assets/img/product/9.webp" alt="Cabine de douche Moderne" class="img-fluid">
             </div>
             <div class="category-content">
               <span class="category-tag">Tendance 2025</span>
@@ -87,7 +87,7 @@
             <div class="col-xl-6">
               <div class="category-card cat-men" data-aos="fade-up" data-aos-delay="300">
                 <div class="category-image">
-                  <img src="assets/img/bain/photo-1729073376204-5d7d25b9226f.avif" alt="Cabine de douche Walk-in" class="img-fluid">
+                  <img src="assets/img/product/10.webp" alt="Cabine de douche Walk-in" class="img-fluid">
                 </div>
                 <div class="category-content">
                   <h4>Cabines de Douche</h4>
